--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,20 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="0dp"
+                android:padding="16dp"
+                android:text="An X is the border of a linguistic phenomenon. X=? " />
+
+            <EditText
+                android:id="@+id/open_question_two"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:padding="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:padding="16dp"
                 android:text="Tick all the nouns" />
 
@@ -182,13 +196,6 @@
                         android:onClick="postScore"
                         android:text="Submit" />
 
-
-                    <TextView
-                        android:id="@+id/score"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:text="" />
                 </LinearLayout>
             </LinearLayout>
 
